Fixes Safari issue with button spacing. Updates button focus state

--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -10,10 +10,16 @@
 
   & > * {
     background: $blue-gray-100;
-    border: 1px solid white;
+    border: 0;
     cursor: pointer;
     flex: 33.333% 0 0;
+    font-size: 0;
     height: rem(100);
+
+    &:focus {
+      outline: 0;
+      box-shadow: inset 0 0 0 rem(2) $blue-400;
+    }
   }
 
   @media (min-width: $breakpoint-medium) {
@@ -53,8 +59,8 @@
       border-radius: 0;
       display: flex;
       height: rem(34);
-      margin-left: rem(16);
       justify-content: center;
+      margin-left: rem(16);
       width: rem(34);
     }
   }
